fix: remove position sticky to make brands visible

--- a/src/pages/catalogPage/catalogPageStyles.css
+++ b/src/pages/catalogPage/catalogPageStyles.css
@@ -1,6 +1,7 @@
 .catalogContainer {
   display: flex;
   flex-direction: column;
+  width: 100vh;
   width: 100%;
   height: 100%;
 }
@@ -25,7 +26,6 @@
 }
 
 aside {
-  position: sticky;
   top: 200px;
   align-self: flex-start;
   width: 200px;
